# RTSGame

./: .bzrignore  .clang-format  .gitattributes  CMakeLists.txt  conanfile.py
cmake/: conan_config.cmake  helpers.cmake
data/levels/: Channelled land_height.tif  default.json  default.yaml
data/models/: AgriDome.xml  Bauhof.xml  Default.flt  Factory.xml  H3-Mine.xml  H3Mine.xml  PowerPlant.xml  apartment.mtl  bootcamp.mtl
data/models/3d/: Defense_Tower-FBX.FBX  Defense_Tower.FBX  Ground.jpg.attr  H3-Mine.mtl  building_one.flt  building_three.flt  building_two.flt  cylinder.flt  factory.mtl  ground.png.attr  oilwell.mtl  side.png.attr  side2.png.attr
data/models/3d/textures/old/: 10ravens_T_Plaster_Old_00282_01.jpg.attr
data/models/3d/textures/scifi/Sci fi Texture pack 01/: u_elpad.jpg.attr
data/models/3d/textures/scifi/Sci fi Texture pack 02/: basewall.tga  c_cameraswitch.tga  c_gfoor.tga  cairn_alarm.tga  cairn_energy.tga  dec_oil01.tga  dec_oil02.tga  dec_oil03.tga  frame1.tga  light01glw.jpg.attr  pipe01.tga  pipe02.tga  wall02_reactor.tga
data/models/3d/textures/scifi/Sci fi Texture pack 03/: glowingcore_on.jpg.attr  tower.jpg.attr  tower2.jpg.attr  tower_frame.tga.attr  towertop.jpg.attr
data/models/3d/textures/scifi/Sci fi Texture pack 04/: mp_b_lstripglow.jpg.attr  s_light.jpg.attr  seam_horiz.png.attr  stucco_grime_top_bottom.jpg.attr
data/models/3d/textures/scifi/Sci fi texture 05/: landing_pad.png.attr  outside_wall.jpg.attr  panellong.jpg.attr
data/models/3d/textures/smooth/: 10ravens_T_Plaster_Smooth_00083_03.jpg.attr
data/models/3d/textures/tiled/: 10ravens_T_Plaster_Old_00268_01_tiled.jpg.attr
data/models/old/: Test.xml
data/shaders/: Building.frag  Building.vert  Terrain.frag  Terrain.vert
data/ui/shaders/: button.frag  button.vert
doc/: TODO.txt
src/: CMakeLists.txt
src/GameApp/: CMakeLists.txt  GameApp.cpp  GameGUI.cpp  GameGUI.h  GameGUI.ui  GameRenderWidget.cpp  GameRenderWidget.h  RenderWidget._cpp  RenderWidget.cpp
src/GameCore/: CMakeLists.txt  GameArea.cpp  GameArea.h  GameCore.cpp  GameCore.h  GameLogic.cpp  GameLogic.h
src/GameCore/Util/: Config.h  GameModels.cpp  GameModels.h  GameTerrain.cpp  GameTerrain.h  HUDManager.cpp  HUDManager.h  Properties.cpp  Properties.h  TerrainPicker.cpp  TerrainPicker.h  TerrainTechniques.cpp  TerrainTechniques.h
src/RenderCore/: CMakeLists.txt  CamResizeHandler.cpp  CamResizeHandler.h  RenderCore.cpp  RenderCore.h
src/RenderCore/gdal/: DataSetLayer.cpp  ReaderWriterGDAL.cpp
src/TerrainTest/: CMakeLists.txt  osgterrain.cpp
